# podsearch

./: .gitignore  .pre-commit-config.yaml  Makefile  gunicorn_start  pyproject.toml  requirements.txt
app/: server.py
app/server/: Makefile  pyproject.toml  server.py  vector_search.py
app/src/podsearch/: package-lock.json  package.json
index/: add_embeddings.py  add_embeddings_and_topics.py  add_topics.py  agglomerate.py  build_index.py  download_episodes.py  parse_vtt.py  transcribe.py
